your commit message

--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,14 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+:root {
+  --background-image: url(../images/cover-image-dark.png);
+  --background-color: rgb(0, 0, 40);
+  --accent-color: rgb(255, 0, 112);
+  --accent-color-rgb: 255, 0, 112;
+  --text-color: rgb(241, 178, 206);
+  --gap: 20px;
+  --accent-heading-fs-mobile: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  --accent-heading-fs-desktop: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  --bold: 700;
+}
