--- a/styles/dark.css
+++ b/styles/dark.css
@@ -5,8 +5,17 @@
 */
 
 .page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
+	/* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+}
+
+.page.theme_dark {
+  --background-image: url(../images/cover-image-dark.png);
+  --background-color: rgb(0, 0, 40);
+  --accent-color: rgb(255, 0, 112);
+  --accent-color-rgb: 255, 0, 112;
+  --text-color: rgb(241, 178, 206);
+  color: var(--accent-color);
 }
