--- a/styles/light.css
+++ b/styles/light.css
@@ -1,12 +1,57 @@
-/*
+/*/*
   Специально для светлой темы при наличии класса.
   Здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
 
 .page.theme_light {
-  /* сохраните этот селектор в приведённом виде.
+	/* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+}
+
+.page.theme_light {
+    --background-image: url(../images/cover-image-light.png);
+    --background-color: rgb(255, 241, 247);
+    --accent-color: rgb(255, 141, 203);
+    --accent-color-rgb: 53, 52, 48;
+    --text-color: rgb(53, 52, 48);
+    color: var(--text-color);
+}
+
+@media (width >= 1024px) {
+    .title {
+        text-shadow: 4px 4px 0 rgb(255, 0, 112);
+    }
+}
+
+@media (prefers-color-scheme: light) {
+    .page {
+        --background-color: rgb(255, 241, 247);
+        --accent-color: rgb(255, 141, 203);
+        --accent-color-rgb: 53, 52, 48;
+        --text-color: rgb(53, 52, 48);
+        --background-image: url(../images/cover-image-light.png);
+
+        color: var(--text-color);
+    }
+
+    .header__theme-dark-decor {
+        display: none;
+    }
+
+    .title-decor {
+        --text-color: var(--text-color);
+    }
+
+    .title {
+        color: rgb(255, 194, 230);
+    }
+
+    @media (width >= 1024px) {
+        .title {
+            text-shadow: 4px 4px 0 rgb(255, 0, 112);
+        }
+    }
 }
