--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,21 +1,40 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 .page.theme_dark {
-	/* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --bg-color: #000028;
+  --main-text-color: #f1b2ce;
+  --accent-color: #ff0070;
+  --decor-color: #ff0070;
+  --main-title-text-color: #db00ff;
+  --subtitle-color: #000028;
+  --btn-hover-color: rgba(255, 0, 112, 0.4);
+  --main-font: IBM Plex Mono, sans-serif;
+  --main-font-size: 18px;
+  --padding: 10px;
+  --header-bg-image: url(../images/cover-image-dark.png);
 }
 
-.page.theme_dark {
-  --background-image: url(../images/cover-image-dark.png);
-  --background-color: rgb(0, 0, 40);
-  --accent-color: rgb(255, 0, 112);
-  --accent-color-rgb: 255, 0, 112;
-  --text-color: rgb(241, 178, 206);
-  color: var(--accent-color);
+.header__theme-dark-decor {
+  position: absolute;
+  top: 10px;
+  right: 18px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: var(--accent-color, #ff0070);
+  text-align: center;
+  text-transform: uppercase;
+  line-height: 25px;
+}
+
+.header__theme-dark-decor::after {
+  content: "";
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  background-color: var(--accent-color, #ff0070);
+  filter: drop-shadow(0px 0px 4px var(--accent-color, #ff0070));
+  box-shadow: 0 0 5px 2px currentColor;
+}
+
+.theme_dark .title {
+  color: var(--brand-color, #db00ff);
 }
