--- a/styles/light.css
+++ b/styles/light.css
@@ -1,57 +1,57 @@
-/*/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 .page.theme_light {
-	/* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+    --bg-color: #fff1f7;
+    --main-text-color: #353430;
+    --accent-color: #ff8dcb;
+    --decor-color: #353430;
+    --main-title-text-color: #ffc2e6;
+    --subtitle-color: #353430;
+    --btn-hover-color: rgba(50, 49, 45, 0.4);
+    --main-font: IBM Plex Mono, sans-serif;
+    --main-font-size: 18px;
+    --main-title-font-size: 116px;
+    --padding: 10px;
+    --header-bg-image: url(../images/cover-image-light.png);
 }
 
-.page.theme_light {
-    --background-image: url(../images/cover-image-light.png);
-    --background-color: rgb(255, 241, 247);
-    --accent-color: rgb(255, 141, 203);
-    --accent-color-rgb: 53, 52, 48;
-    --text-color: rgb(53, 52, 48);
-    color: var(--text-color);
+.theme_light .header__theme-dark-decor {
+    display: none;
 }
 
-@media (width >= 1024px) {
-    .title {
-        text-shadow: 4px 4px 0 rgb(255, 0, 112);
-    }
+.theme_auto .header__theme-dark-decor {
+    display: none;
 }
 
 @media (prefers-color-scheme: light) {
-    .page {
-        --background-color: rgb(255, 241, 247);
-        --accent-color: rgb(255, 141, 203);
-        --accent-color-rgb: 53, 52, 48;
-        --text-color: rgb(53, 52, 48);
-        --background-image: url(../images/cover-image-light.png);
-
-        color: var(--text-color);
+    :root {
+        --bg-color: #fff1f7;
+        --main-text-color: #353430;
+        --accent-color: #ff8dcb;
+        --decor-color: #353430;
+        --main-title-text-color: #ffc2e6;
+        --subtitle-color: #353430;
+        --btn-hover-color: rgba(50, 49, 45, 0.4);
+        --main-font: IBM Plex Mono, sans-serif;
+        --main-font-size: 18px;
+        --padding: 10px;
+        --header-bg-image: url(../images/cover-image-light.png);
     }
+}
 
-    .header__theme-dark-decor {
-        display: none;
-    }
-
-    .title-decor {
-        --text-color: var(--text-color);
-    }
-
+@media (min-width: 1024px) {
     .title {
-        color: rgb(255, 194, 230);
+        text-shadow: 4px 4px 0px #ff0070;
     }
+}
 
-    @media (width >= 1024px) {
-        .title {
-            text-shadow: 4px 4px 0 rgb(255, 0, 112);
-        }
+@media (min-width: 768px) {
+    .title {
+        font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    }
+}
+
+@media (min-width: 768px) {
+    .header__title {
+        margin-inline-start: -20px;
+        justify-self: start;
     }
 }
