--- a/styles/style.css
+++ b/styles/style.css
@@ -1,191 +1,385 @@
 .page {
-    display: grid;
-    align-items: center;
-    background-image: var(--header-bg-image);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    background-attachment: fixed;
-    font-family: var(--main-font, IBM Plex Mono, sans-serif);
-    font-size: var(--main-font-size, 18px);
-    color: var(--main-text-color, #f1b2ce);
-    background-color: var(--bg-color, #000028);
-    line-height: 23.4px;
+  display: grid;
+  align-items: center;
+  background-image: var(--header-bg-image);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  font-family: "IBM Plex mono", "Arial", "sans-serif";
+  font-size: var(--main-font-size, 18px);
+  color: var(--main-text-color, #f1b2ce);
+  background-color: var(--bg-color, #000028);
+  line-height: 23.4px;
 }
 
 .decorated-zone {
-    position: relative;
+  position: relative;
 }
 
 .decorated-zone::before {
-    content: "";
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    width: 25px;
-    height: 25px;
-    border-top: 1px solid var(--decor-color, #ff0070);
-    border-right: 1px solid var(--decor-color, #ff0070);
+  content: "";
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 25px;
+  height: 25px;
+  border-top: 1px solid var(--decor-color, #ff0070);
+  border-right: 1px solid var(--decor-color, #ff0070);
 }
 
 .decorated-zone::after {
-    content: "";
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
-    width: 25px;
-    height: 25px;
-    border-bottom: 1px solid var(--decor-color, #ff0070);
-    border-left: 1px solid var(--decor-color, #ff0070);
+  content: "";
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  width: 25px;
+  height: 25px;
+  border-bottom: 1px solid var(--decor-color, #ff0070);
+  border-left: 1px solid var(--decor-color, #ff0070);
 }
 
 .header {
-    min-block-size: 100vh;
-    padding: var(--padding, 10px);
-    display: grid;
-    grid-template-rows: 1fr min-content 1fr;
-    align-items: center;
+  min-block-size: 668px;
+  height: 100vh;
+  padding: var(--padding, 10px);
+  display: grid;
+  grid-template-rows: 1fr min-content 1fr;
+  align-items: center;
 }
 
 .header__theme-menu-list {
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-    gap: 10px;
-    color: var(--decor-color, #ff0070);
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  gap: 10px;
+  color: var(--decor-color, #ff0070);
 }
 
 .header__theme-menu-button {
-    display: flex;
-    align-items: center;
-    height: 26px;
-    padding: 0px 13px;
-    border: none;
-    background-color: transparent;
-    text-transform: lowercase;
-    line-height: 18px;
-    cursor: pointer;
+  display: flex;
+  align-items: center;
+  height: 26px;
+  padding: 0px 13px;
+  border: none;
+  background-color: transparent;
+  text-transform: lowercase;
+  line-height: 18px;
+  cursor: pointer;
+  border: 1px solid transparent;
 }
 
 .header__theme-menu-button_active {
-    pointer-events: none;
-    outline: 1px solid var(--decor-color, #ff0070);
+  pointer-events: none;
+  outline: 1px solid var(--decor-color, #ff0070);
 }
 
 .header__theme-menu-button:hover {
-    outline: 1px solid var(--btn-hover-color, rgba(255, 0, 112, 0.4));
+  outline: 1px solid var(--btn-hover-color, rgba(255, 0, 112, 0.4));
 }
 
 .header__theme-menu-button:focus {
-    outline: none;
+  outline: none;
 }
 
 .header__theme-menu-button:focus-visible {
-    outline: none;
-    border-block-end: 1px solid currentColor;
+  outline: none;
+  border-block-end: 1px solid currentColor;
 }
 
 .title {
-    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-    font-weight: 700;
-    line-height: 82.5%;
-    text-shadow: 4px 4px 0px var(--accent-color, #ff0070);
-    color: var(--main-title-text-color, #db00ff);
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-weight: 700;
+  line-height: 82.5%;
+  text-shadow: 4px 4px 0px var(--accent-color, #ff0070);
+  color: var(--main-title-text-color, #db00ff);
 }
 
 .title-decor {
-    background-color: var(--accent-color, #ff0070);
-    color: var(--subtitle-color, #000028);
-    font-weight: 700;
-    font-family: var(--main-font, IBM Plex Mono, sans-serif);
-    font-size: var(--main-font-size, 18px);
+  background-color: var(--accent-color, #ff0070);
+  color: var(--subtitle-color, #000028);
+  font-weight: 700;
+  font-family: "IBM Plex mono", "Arial", "sans-serif";
+  font-size: var(--main-font-size, 18px);
 }
 
 .content {
-    display: grid;
-    gap: 50px;
-    padding: 0 var(--padding, 10px);
-    margin-block-start: 40px;
-    margin-block-end: 40px;
+  display: grid;
+  gap: 50px;
+  padding: 0 var(--padding, 10px);
+  margin-block-start: 40px;
+  margin-block-end: 40px;
 }
 
 .section__reasons-card-set {
-    display: grid;
-    gap: 20px;
+  display: grid;
+  gap: 20px;
 }
 
 .header__text {
-    inline-size: max(355px, 50%);
+  inline-size: max(355px, 50%);
 }
 
 .main {
-    margin-block: var(--main-block-margin);
+  margin-block: var(--main-block-margin);
 }
 
 .section {
-    display: grid;
-    gap: 20px;
+  display: grid;
+  gap: 20px;
 }
 
 .section__title {
-    font-family: var(--main-font, IBM Plex Mono, sans-serif);
-    font-size: var(--main-font-size, 18px);
-    font-weight: 700;
-    line-height: 23.4px;
-    color: var(--decor-color, #ff0070);
+  font-family: "IBM Plex mono", "Arial", "sans-serif";
+  font-size: var(--main-font-size, 18px);
+  font-weight: 700;
+  line-height: 23.4px;
+  color: var(--decor-color, #ff0070);
 }
 
 .section__card {
-    display: grid;
-    gap: 10px;
+  display: grid;
+  gap: 10px;
 }
 
 .title-normal-font-weight {
-    font-weight: 400;
+  font-weight: 400;
 }
 
 .link {
-    text-shadow: 2px 2px 0 var(--accent-color);
-    text-decoration: none;
+  text-shadow: 2px 2px 0 var(--accent-color);
+  text-decoration: none;
 }
 
 .link:hover {
-    border-block-end: 1px solid currentColor;
+  border-block-end: 1px solid currentColor;
 }
 
 .link:focus {
-    outline: none;
+  outline: none;
 }
 
 .link:focus-visible {
-    outline: 1px solid currentColor;
+  outline: 1px solid currentColor;
 }
 
 .main__image {
-    display: grid;
-    gap: 10px;
+  display: grid;
+  gap: 10px;
 }
 
 .image {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
 
 .gallery {
-    display: grid;
-    gap: 10px;
+  display: grid;
+  gap: 10px;
 }
 
 .footer {
-    min-block-size: 100vh;
-    padding: var(--padding, 10px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-shadow: 2px 2px 0px var(--accent-color, #ff0070);
+  min-block-size: 668px;
+  height: 100vh;
+  padding: var(--padding, 10px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-shadow: 2px 2px 0px var(--accent-color, #ff0070);
 }
 
 .footer__title {
-    text-shadow: 2px 2px 0 var(--accent-color);
+  text-shadow: 2px 2px 0 var(--accent-color);
+}
+
+.header__theme-dark-decor {
+  position: absolute;
+  top: 10px;
+  right: 18px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: var(--accent-color, #ff0070);
+  text-align: center;
+  text-transform: uppercase;
+  line-height: 25px;
+}
+
+.header__theme-dark-decor::after {
+  content: "";
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  background-color: var(--accent-color, #ff0070);
+  filter: drop-shadow(0px 0px 4px var(--accent-color, #ff0070));
+  box-shadow: 0 0 5px 2px currentColor;
+}
+
+@media (min-width: 768px) {
+  .gallery {
+      gap: 20px;
+  }
+}
+
+@media (min-width: 768px) {
+  .image {
+      height: 100% !important;
+  }
+}
+
+@media (min-width: 768px) {
+  .header {
+      justify-items: end;
+      padding: var(--padding-middle, 20px);
+  }
+
+  .header__decoration__rec {
+      top: 20px;
+      right: 28px;
+  }
+
+  .decorated-zone::before {
+      top: 20px;
+      right: 20px;
+  }
+
+  .decorated-zone::after {
+      bottom: 20px;
+      left: 20px;
+  }
+
+  .header__title {
+      margin-inline-start: -20px;
+      justify-self: start;
+  }
+
+  .title-style {
+      font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .header__description-text {
+      width: 50%;
+  }
+
+  .content {
+      padding: 0 var(--padding-middle, 20px);
+      gap: 80px;
+      margin-block-start: 60px;
+      margin-block-end: 60px;
+  }
+
+  .section__why-difficult,
+  .section__how-to-concentrate {
+      grid-template-columns: 1fr 2fr;
+  }
+
+  .section__why-difficult .section__card {
+      grid-column-start: 2;
+      grid-column-end: 3;
+  }
+
+  .section__how-to-concentrate .section__card {
+      grid-column-start: 2;
+      grid-column-end: 3;
+  }
+
+  .section__how-to-concentrate .section__title {
+      max-height: 23px;
+  }
+
+  .section__reasons .section__title {
+      width: 30%;
+  }
+
+  .footer {
+      padding: var(--padding-middle, 20px);
+  }
+}
+
+@media (min-width: 1024px) {
+  .section__why-difficult,
+  .section__how-to-concentrate {
+      grid-template-columns: 1fr 2.06fr;
+  }
+
+  .section__reasons-card-set {
+      grid-template-columns: repeat(3, 1fr);
+  }
+
+  .section__reasons-card-set .section__card {
+      grid-template-rows: 23px auto;
+  }
+}
+
+@media (min-width: 768px) {
+  .header__theme-dark-decor {
+      top: 20px !important;
+      right: 28px !important;
+  }
+}
+
+@media (min-width: 1024px) {
+  .header__theme-menu {
+      justify-self: center;
+      align-self: start;
+  }
+  .header__theme-menu-list {
+      flex-direction: row !important;
+  }
+}
+
+@media (min-width: 768px) {
+  .decorated-zone::before {
+      top: 20px;
+      right: 20px;
+  }
+}
+
+@media (min-width: 768px) {
+  .decorated-zone::after {
+      bottom: 20px;
+      left: 20px;
+  }
+}
+
+@media (min-width: 768px) {
+  .main__image {
+      display: grid !important;
+      gap: 20px !important;
+      grid-template-areas:
+          "sunset sunset ice-cream"
+          "tape books ice-cream"
+          "tape street street";
+  }
+}
+
+@media (min-width: 768px) {
+  .image:first-of-type {
+      grid-area: sunset;
+  }
+}
+
+@media (min-width: 768px) {
+  .image:nth-of-type(2) {
+      grid-area: ice-cream;
+  }
+}
+
+@media (min-width: 768px) {
+  .image:nth-of-type(3) {
+      grid-area: tape;
+  }
+}
+
+@media (min-width: 768px) {
+  .image:nth-of-type(4) {
+      grid-area: books;
+  }
+}
+
+@media (min-width: 768px) {
+  .image:last-of-type {
+      grid-area: street;
+  }
 }
